--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function fillWithData(url, callback) { // call from python
   xhr.open('GET', url, true)
   xhr.onload = function () {
   	var result = JSON.parse(xhr.responseText);
-  	if (xhr.readyState == 4 && xhr.status == "200") {
+  	if (xhr.readyState === 4 && xhr.status === "200") {
         console.log(result);
         //loadData(name, result);
         callback(result)
