view integration test / extend view test

--- a/tests/test_html_builder_data/result_html.html
+++ b/tests/test_html_builder_data/result_html.html
@@ -13,16 +13,16 @@
 
     }
 </script>
+
 <script>
 const widget2Html = "<b>Widget2</b>";
 function widget2Eval() {
     alert("widget2")
 }
-const widget1Html = "<b>Widget1</b>";
+const widget1Html = "<b>Widget1</b> <div class=\"foo\">Hello World </div>";
 function widget1Eval() {
     alert("widget1")
 }
 </script>
-
 </body>
 </html>
