--- a/tests/test_html_builder_data/result_html.html
+++ b/tests/test_html_builder_data/result_html.html
@@ -19,7 +19,7 @@ const widget2Html = "<b>Widget2</b>";
 function widget2Eval() {
     alert("widget2")
 }
-const widget1Html = "<b>Widget1</b> <div class=\"foo\">Hello World </div>";
+const widget1Html = "<b>Widget1</b>\n<div class=\"foo\">\n    Hello World\n</div>";
 function widget1Eval() {
     alert("widget1")
 }
